<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorThemeBackground"
    android:orientation="vertical"
    tools:ignore="ContentDescription, UseCompoundDrawables, UseAppTint">

    <LinearLayout
        android:id="@+id/main_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dark_round"
        android:elevation="0dp"
        android:gravity="center|start"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="13dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/title_restart_icon"
                style="?android:attr/selectableItemBackgroundBorderless"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="15dp"
                android:alpha="0.85"
                android:src="@drawable/ic_restart"
                android:tint="@color/white" />

            <ImageView
                android:id="@+id/title_about_page"
                style="?android:attr/selectableItemBackgroundBorderless"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginEnd="5dp"
                android:alpha="0.85"
                android:src="@drawable/ic_more"
                android:tint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:elevation="0dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/main_img_status"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_warn"
                android:tint="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/main_text_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/module_is_not_active"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/main_text_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/module_version"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/main_text_api_way"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:alpha="0.6"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/xposed_framework_version"
                    android:textColor="@color/white"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:elevation="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginEnd="10dp"
            android:alpha="0.85"
            android:src="@drawable/ic_info"
            android:tint="@color/colorTextDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:lineSpacingExtra="5dp"
            android:text="@string/main_activity_hint"
            android:textColor="@color/colorTextGray"
            android:textSize="11sp" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:fadingEdgeLength="10dp"
        android:fillViewport="true"
        android:requiresFadingEdge="vertical">

        <LinearLayout
            android:id="@+id/settings_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-20dp"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="5dp"
            android:animateLayoutChanges="true"
            android:orientation="vertical" />
    </androidx.core.widget.NestedScrollView>
</LinearLayout>