<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorThemeBackground"
    android:orientation="vertical"
    tools:ignore="ContentDescription, UseCompoundDrawables, UseAppTint">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:gravity="center|start"
        android:paddingLeft="15dp"
        android:paddingTop="13dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/title_back_icon"
            style="?android:attr/selectableItemBackgroundBorderless"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/abc_ic_ab_back_material"
            android:tint="@color/colorTextGray"
            android:tooltipText="返回" />

        <TextView
            android:gravity="center_vertical"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:singleLine="true"
            android:text="@string/about"
            android:textColor="@color/colorTextGray"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="90dp"
            android:layout_height="90dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/colorTextGray"
            android:textSize="15sp"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextGray"
            android:textSize="15sp"
            android:text="@string/version" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:fadingEdgeLength="10dp"
        android:fillViewport="true"
        android:requiresFadingEdge="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:animateLayoutChanges="true"
                android:background="@drawable/bg_permotion_round"
                android:elevation="0dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.85"
                    android:singleLine="true"
                    android:text="@string/developer"
                    android:textColor="@color/colorTextGray"
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/developer_milu"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/milu_icon"
                        android:layout_width="45dp"
                        android:layout_height="45dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:lineSpacingExtra="6dp"
                        android:text="@string/developer_milu"
                        android:textColor="@color/colorTextGray"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:animateLayoutChanges="true"
                android:background="@drawable/bg_permotion_round"
                android:elevation="0dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.85"
                    android:singleLine="true"
                    android:text="@string/open_source_repo"
                    android:textColor="@color/colorTextGray"
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/github_repo"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:tint="@color/colorTextGray"
                        android:src="@drawable/img_github" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:lineSpacingExtra="6dp"
                            android:text="GITHUB"
                            android:textColor="@color/colorTextGray"
                            android:textSize="15sp"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:lineSpacingExtra="6dp"
                            android:text="https://github.com/GSWXXN/RestoreSplashScreen"
                            android:textColor="@color/colorTextDark"
                            android:textSize="12sp"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:animateLayoutChanges="true"
                android:background="@drawable/bg_permotion_round"
                android:elevation="0dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.85"
                    android:singleLine="true"
                    android:text="@string/icon_resource"
                    android:textColor="@color/colorTextGray"
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/iconfont"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:src="@drawable/img_iconfont" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/license_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:animateLayoutChanges="true"
                android:background="@drawable/bg_permotion_round"
                android:elevation="0dp"
                android:gravity="center|start"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.85"
                    android:singleLine="true"
                    android:text="@string/open_source_license"
                    android:textColor="@color/colorTextGray"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>