<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorThemeBackground"
    android:orientation="vertical"
    tools:context=".ui.MainActivity"
    tools:ignore="UseCompoundDrawables,ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:gravity="center|start"
        android:paddingStart="15dp"
        android:paddingTop="13dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <ImageView
            style="?android:attr/selectableItemBackgroundBorderless"
            android:id="@+id/title_back_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_back_button"
            android:tint="@color/colorTextGray"
            android:tooltipText="返回" />

        <TextView
            android:id="@+id/app_list_title"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:textColor="@color/colorTextGray"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:visibility="gone"
            android:textSize="17sp"
            android:textColor="@color/colorTextGray"
            android:imeOptions="actionSearch"
            android:nextFocusDown="@id/search_edit_text"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:importantForAutofill="no" />

        <ImageView
            android:id="@+id/config_title_filter"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_search"
            android:tint="@color/colorTextGray"/>

        <ImageView
            android:id="@+id/more_options"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_more_options"
            android:tint="@color/colorTextGray"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/config_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_permotion_round"
        android:elevation="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginEnd="10dp"
            android:alpha="0.85"
            android:src="@drawable/ic_info"
            android:tint="@color/colorTextDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:lineSpacingExtra="5dp"
            android:text="@string/save_hint"
            android:textColor="@color/colorTextGray"
            android:textSize="11sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/config_list_loading_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:lineSpacingExtra="6dp"
            android:text="@string/loading"
            android:textColor="@color/colorTextDark"
            android:textSize="17sp" />

        <ListView
            android:id="@+id/config_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/trans"
            android:dividerHeight="15dp"
            android:fadingEdgeLength="10dp"
            android:listSelector="@color/trans"
            android:padding="15dp"
            android:requiresFadingEdge="vertical"
            android:scrollbars="none"
            android:visibility="gone" />
    </FrameLayout>

    <TextView
        android:id="@+id/config_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_button_round"
        android:gravity="center"
        android:padding="10dp"
        android:singleLine="true"
        android:text="@string/save"
        android:textColor="@color/colorTextGray"
        android:textSize="15sp" />
</LinearLayout>